--- a/Wray_Tracker/Views/Projects/ManageProjectAssignments.cshtml
+++ b/Wray_Tracker/Views/Projects/ManageProjectAssignments.cshtml
@@ -1,6 +1,9 @@
-﻿@model IEnumerable<Wray_Tracker.ViewModels.CustomUserData>
+﻿@using Wray_Tracker.Helper;
+@model IEnumerable<Wray_Tracker.ViewModels.CustomUserData>
 @{
     ViewBag.Title = "ManageProjectAssignments";
+
+    ColorHelper colorHelper = new ColorHelper();
     
 
 }
