--- a/Wray_Tracker/Views/Admin/ManageRoles.cshtml
+++ b/Wray_Tracker/Views/Admin/ManageRoles.cshtml
@@ -1,7 +1,11 @@
-﻿@model IEnumerable<Wray_Tracker.ViewModels.CustomUserData>
+﻿@using Wray_Tracker.Helper;
+@model IEnumerable<Wray_Tracker.ViewModels.CustomUserData>
 @{
     ViewBag.Title = "Manage Roles";
+
 }
+
+@{ ColorHelper colorHelper = new ColorHelper(); }
 
 <h2>@ViewBag.Title</h2>
 
@@ -50,13 +54,13 @@
             @foreach (var user in Model)
             {
                 <tr>
-                    <td>
+                    <td class="@colorHelper.GetUserColorClass(user.RoleName)">
                         @Html.DisplayFor(model => user.FullName)
                     </td>
                     <td>
                         @Html.DisplayFor(model => user.Email)
                     </td>
-                    <td>
+                    <td class="@colorHelper.GetUserColorClass(user.RoleName)">
                         @Html.DisplayFor(model => user.RoleName)
                     </td>
                 </tr>
