--- a/Wray_Tracker/Views/Projects/ProjectDetails.cshtml
+++ b/Wray_Tracker/Views/Projects/ProjectDetails.cshtml
@@ -1,13 +1,13 @@
 ﻿@model Wray_Tracker.Models.Project
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "ProjectDetails";
 }
 
 <h2>Details</h2>
 
 <div>
-    <h4>Project</h4>
+    <h4>Project Dashboard</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
