--- a/Wray_Tracker/Views/Shared/_Layout.cshtml
+++ b/Wray_Tracker/Views/Shared/_Layout.cshtml
@@ -193,12 +193,12 @@
                                     </li>
 
 
-                                <li class="nav-item">
-                                    <a href="@Url.Action("Index", "Projects")" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Active Projects</p>
-                                    </a>
-                                </li>
+                                    <li class="nav-item">
+                                        <a href="@Url.Action("Index", "Projects")" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>Active Projects</p>
+                                        </a>
+                                    </li>
                                 }
                             </ul>
                         </li>
@@ -221,7 +221,7 @@
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>New Ticket</p>
                                         </a>
-                                        
+
                                     </li>
                                 }
                                 @if (User.IsInRole("Admin"))
@@ -233,13 +233,13 @@
                                         </a>
                                     </li>
                                 }
-                                    <li class="nav-item">
-                                        <a href="pages/charts/inline.html" class="nav-link">
-                                            <i class="far fa-circle nav-icon"></i>
-                                            <p>Ticket History</p>
-                                        </a>
-                                    </li>
-                                </ul>
+                                <li class="nav-item">
+                                    <a href="@Url.Action("Index", "TicketHistories")" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Ticket History</p>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <!-- Log Out -->
                         <li class="nav-item">
