--- a/Wray_Tracker/Views/TicketHistories/Index.cshtml
+++ b/Wray_Tracker/Views/TicketHistories/Index.cshtml
@@ -54,15 +54,21 @@
         </td>
         <td>
             @* At the moment I would need to feed the DisplayData method an instance of a TicketHistory *@
-            @HistoryDisplayHelper.DisplayData(item)
+            @*@HistoryDisplayHelper.DisplayData(item)*@
+
+            @Html.DisplayFor(modelItem => item.NewValue)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.ChangedOn)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            @if (User.IsInRole("Admin"))
+            {
+                @Html.ActionLink("Edit | ", "Edit", new { id = item.Id }) 
+                @Html.ActionLink("Details | ", "Details", new { id = item.Id })
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            }
+
         </td>
     </tr>
 </tbody>
