--- a/Wray_Tracker/Views/Tickets/Edit.cshtml
+++ b/Wray_Tracker/Views/Tickets/Edit.cshtml
@@ -68,7 +68,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DeveloperId, "Developer", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("DeveloperId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("DeveloperId", null, "- Select Developer -", htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.DeveloperId, "", new { @class = "text-danger" })
             </div>
         </div>
