Update to files
implemented ticket attachment functionality within ticket dashboard

--- a/Wray_Tracker/Views/Home/Dashboard.cshtml
+++ b/Wray_Tracker/Views/Home/Dashboard.cshtml
@@ -1087,7 +1087,7 @@
                                     <td>
                                         @Html.ActionLink("Edit", "Edit", "Tickets", new { id = item.Id }, null) |
 
-                                        @Html.ActionLink("Ticket Details", "TicketDetails", "Tickets", new { id = item.Id }, null)
+                                        @Html.ActionLink("Ticket Dashboard", "Dashboard", "Tickets", new { id = item.Id }, null)
                                         @*@Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
                                     </td>
                                 </tr>
