--- a/Wray_Tracker/Views/Tickets/Index.cshtml
+++ b/Wray_Tracker/Views/Tickets/Index.cshtml
@@ -92,7 +92,7 @@
                 </td>*@
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Ticket.Id }) |
-                    @Html.ActionLink("Ticket Details", "TicketDetails", new { id = item.Ticket.Id }) |
+                    @Html.ActionLink("Ticket Dashboard", "Dashboard", new { id = item.Ticket.Id })
                     @*@Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
                 </td>
             </tr>
