update to files
finished ticket attachment functionality,
made design improvements

--- a/Wray_Tracker/Views/Home/EditProfile.cshtml
+++ b/Wray_Tracker/Views/Home/EditProfile.cshtml
@@ -10,7 +10,7 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal card card-info">
+    <div class="form-horizontal card card-navy">
         <h4 class="card-header">User Profile</h4>
         
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -50,7 +50,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-warning" />
             </div>
         </div>
     </div>
