--- a/Wray_Tracker/Views/Admin/ManageRoles.cshtml
+++ b/Wray_Tracker/Views/Admin/ManageRoles.cshtml
@@ -36,7 +36,7 @@
 
     <hr />
 
-    <table class="table">
+    <table class="table table-striped table-bordered">
         <thead>
             <tr>
                 <th>
