--- a/Wray_Tracker/Views/Home/About.cshtml
+++ b/Wray_Tracker/Views/Home/About.cshtml
@@ -59,7 +59,7 @@
                 <div class="col-12">
                     <a href="@Url.Action("EditProfile", "Home")">
                         <div class="info-box">
-                            <span class="info-box-icon bg-info elevation-1"><i class="fas fa-cog"></i></span>
+                            <span class="info-box-icon bg-gradient-warning elevation-1"><i class="fas fa-cog"></i></span>
                             <div class="info-box-content">
                                 <span class="text-bold">Edit Profile</span>
                             </div>
