--- a/Wray_Tracker/Views/Home/Dashboard.cshtml
+++ b/Wray_Tracker/Views/Home/Dashboard.cshtml
@@ -903,7 +903,7 @@
             <!-- /.card-header -->
             <div class="card-body p-0">
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table table-striped table-bordered">
                         <thead>
                             <tr>
                                 <th>
@@ -1007,7 +1007,7 @@
             <!-- /.card-header -->
             <div class="card-body p-0">
                 <div class="table-responsive">
-                    <table class="table">
+                    <table class="table table-striped table-bordered">
                         <thead>
                             <tr>
                                 <th>
