--- a/Wray_Tracker/Views/Projects/AssignUsers.cshtml
+++ b/Wray_Tracker/Views/Projects/AssignUsers.cshtml
@@ -6,7 +6,7 @@
 
 
     <div class="container">
-        <div class="row card">
+        <div class="row card card-navy">
             <div class="col">
                 <h2 class="card-header">AssignUsers</h2>
                 @using (Html.BeginForm())
