--- a/Wray_Tracker/Views/Projects/Index.cshtml
+++ b/Wray_Tracker/Views/Projects/Index.cshtml
@@ -11,7 +11,7 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 
-<table class="table">
+<table class="table table-striped table-bordered">
     <thead>
         <tr>
             <th>
