--- a/Wray_Tracker/Views/TicketHistories/Index.cshtml
+++ b/Wray_Tracker/Views/TicketHistories/Index.cshtml
@@ -7,17 +7,14 @@
     
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
+<h2>Ticket History Dashboard</h2>
+<hr />
+<table class="table table-striped table-bordered">
     <thead>
         <tr>
             @*<th>
-                @Html.DisplayNameFor(model => model.Ticket.SubmitterId)
-            </th>*@
+                    @Html.DisplayNameFor(model => model.Ticket.SubmitterId)
+                </th>*@
             <th>
                 @Html.DisplayName("Changed By")
             </th>
@@ -36,42 +33,43 @@
             <th></th>
         </tr>
     </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
 
-@foreach (var item in Model) {
-<tbody>
-    <tr>
-        @*<td>
-                @Html.DisplayFor(modelItem => item.Ticket.SubmitterId)
-            </td>*@
-        <td>
-            @Html.DisplayFor(modelItem => item.User.FullName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Property)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OldValue)
-        </td>
-        <td>
-            @* At the moment I would need to feed the DisplayData method an instance of a TicketHistory *@
-            @*@HistoryDisplayHelper.DisplayData(item)*@
+            <tr>
+                @*<td>
+                    @Html.DisplayFor(modelItem => item.Ticket.SubmitterId)
+                </td>*@
+                <td>
+                    @Html.DisplayFor(modelItem => item.User.FullName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Property)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OldValue)
+                </td>
+                <td>
+                    @* At the moment I would need to feed the DisplayData method an instance of a TicketHistory *@
+                    @*@HistoryDisplayHelper.DisplayData(item)*@
 
-            @Html.DisplayFor(modelItem => item.NewValue)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ChangedOn)
-        </td>
-        <td>
-            @if (User.IsInRole("Admin"))
-            {
-                @Html.ActionLink("Edit | ", "Edit", new { id = item.Id }) 
-                @Html.ActionLink("Details | ", "Details", new { id = item.Id })
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            }
+                    @Html.DisplayFor(modelItem => item.NewValue)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ChangedOn)
+                </td>
+                <td>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        @Html.ActionLink("Edit | ", "Edit", new { id = item.Id })
+                        @Html.ActionLink("Details | ", "Details", new { id = item.Id })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    }
 
-        </td>
-    </tr>
-</tbody>
-}
+                </td>
+            </tr>
 
-</table>
+        }
+    </tbody>
+    </table>
