--- a/Wray_Tracker/Views/Home/Dashboard.cshtml
+++ b/Wray_Tracker/Views/Home/Dashboard.cshtml
@@ -79,7 +79,6 @@
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
                         <span class="info-box-icon bg-success elevation-1"><i class="fas fa-users"></i></span>
-
                         <div class="info-box-content">
                             <span class="info-box-text">Developers</span>
                             <span class="info-box-number">5</span>
@@ -91,8 +90,7 @@
                 <!-- /.col -->
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
-                        <span class="info-box-icon bg-warning elevation-1"><i class="fas fa-users"></i></span>
-
+                        <span class="info-box-icon bg-orange elevation-1"><i class="fas fa-users"></i></span>
                         <div class="info-box-content">
                             <span class="info-box-text">Submitters</span>
                             <span class="info-box-number">4</span>
