--- a/Wray_Tracker/Views/TicketNotifications/Index.cshtml
+++ b/Wray_Tracker/Views/TicketNotifications/Index.cshtml
@@ -4,11 +4,9 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Ticket Notifications</h2>
+<hr />
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <thead>
         <tr>
