--- a/Wray_Tracker/Views/Home/Index.cshtml
+++ b/Wray_Tracker/Views/Home/Index.cshtml
@@ -80,7 +80,7 @@
                    
                 }
 
-                <div class="social-auth-links text-center mb-3">
+                @*<div class="social-auth-links text-center mb-3">
                     <p>- OR -</p>
                     <a href="#" class="btn btn-block btn-primary">
                         <i class="fab fa-facebook mr-2"></i> Sign in using Facebook
@@ -88,7 +88,7 @@
                     <a href="#" class="btn btn-block btn-danger">
                         <i class="fab fa-google mr-2"></i> Sign in using Google
                     </a>
-                </div>
+                </div>*@
                 <!-- /.social-auth-links -->
 
                 <p class="mb-1">
