--- a/Wray_Tracker/Views/Shared/_Layout.cshtml
+++ b/Wray_Tracker/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using Wray_Tracker.Helper
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -35,14 +35,14 @@
             <!-- Left navbar links -->
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" data-widget="pushmenu" href="#" role="button" style="color: #fff;"><i class="fas fa-bars"></i></a>
+                    <a class="nav-link text-white" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="@Url.Action("Dashboard", "Home")" class="nav-link" style="color: #fff;">Home</a>
+                    <a href="@Url.Action("Dashboard", "Home")" class="nav-link text-white">Home</a>
                 </li>
-                <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link" style="color: #fff;">Contact</a>
-                </li>
+                @*<li class="nav-item d-none d-sm-inline-block">
+                    <a href="#" class="nav-link" style="color: #fff;">About</a>
+                </li>*@
             </ul>
 
             <!-- SEARCH FORM -->
@@ -60,37 +60,36 @@
             <!-- Right navbar links -->
             <ul class="navbar-nav ml-auto">
                 <!-- Notifications Dropdown Menu -->
+                <!-- Messages Dropdown Menu -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link" data-toggle="dropdown" href="#" style="color: #fff;">
+                    <a class="nav-link text-white" data-toggle="dropdown" href="#">
                         <i class="far fa-bell"></i>
-                        @*<span class="badge badge-warning navbar-badge">15</span>*@
+                        <span class="badge badge-danger navbar-badge">@MessageHelper.GetUnreadNotifications().Count()</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
-                        <span class="dropdown-item dropdown-header">15 Notifications</span>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                            <i class="fas fa-envelope mr-2"></i> 4 new messages
-                            <span class="float-right text-muted text-sm">3 mins</span>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                            <i class="fas fa-users mr-2"></i> 8 friend requests
-                            <span class="float-right text-muted text-sm">12 hours</span>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item">
-                            <i class="fas fa-file mr-2"></i> 3 new reports
-                            <span class="float-right text-muted text-sm">2 days</span>
-                        </a>
-                        <div class="dropdown-divider"></div>
-                        <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
+                        @foreach (var notification in MessageHelper.GetUnreadNotifications())
+                        {
+                            <a href="#" class="dropdown-item">
+                                <!-- Message Start -->
+                                <div class="media">
+
+                                    <img src="~/Images/user.svg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+                                    <div class="media-body">
+                                        <h3 class="dropdown-item-title">
+                                            @notification.Sender.FullName
+                                        </h3>
+                                        <p class="text-sm">@notification.NotificationBody</p>
+                                        <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i>@notification.Created</p>
+                                    </div>
+                                </div>
+                                <!-- Message End -->
+                            </a>
+                            <div class="dropdown-divider"></div>
+                        }
+                        @* if no messages then show 0 messages, not going to be a link *@
+                        <a href="@Url.Action("Index", "TicketNotifications")" class="dropdown-item dropdown-footer">See All Messages</a>
                     </div>
                 </li>
-                @*<li class="nav-item">
-                        <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
-                            <i class="fas fa-th-large"></i>
-                        </a>
-                    </li>*@
             </ul>
         </nav>
         <!-- /.navbar -->
@@ -110,7 +109,7 @@
         <!-- /.control-sidebar -->
         <!-- Main Footer -->
         <footer class="main-footer">
-            <strong>Copyright &copy; @DateTime.Now.Year.  <a href="//ashtondwray-portfolio.azurewebsites.net/" target="_blank">Ashton Wray</a>.</strong>
+            <strong>Copyright &copy; @DateTime.Now.Year.  <a href="//ashtondwray-portfolio.azurewebsites.net/" target="_blank" class="text-orange">Ashton Wray</a>.</strong>
             All rights reserved.
 
         </footer>
