--- a/Wray_Tracker/Views/Shared/_SideNav.cshtml
+++ b/Wray_Tracker/Views/Shared/_SideNav.cshtml
@@ -3,10 +3,12 @@
 <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link" style="background-color: #001f3f;">
+    <a href="@Url.Action("Dashboard", "Home")" class="brand-link" style="background-color: #001f3f;">
         <img src="~/Images/d-and-d-brands.png" alt="DragonFly Logo" class="brand-image img-circle elevation-3"
-             style="opacity: .8">
-        <span class="brand-text font-weight-light">Dragon Fly</span>
+             style="opacity: .8; margin-right: -.5rem;">
+        <span class="brand-text font-weight-light">
+            <img src="~/Images/onlinelogomaker-052320-1556-4953-whtie.png" style="width: 70%;"/>
+        </span>
     </a>
 
     <!-- Sidebar -->
@@ -25,7 +27,7 @@
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <!-- Add icons to the links using the .nav-icon class
-                with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
                 <li class="nav-item has-treeview">
                     <a href="@Url.Action("Dashboard", "Home")" class="nav-link active" style="background-color: #001f3f;">
                         <i class="nav-icon fas fa-tachometer-alt"></i>
@@ -35,17 +37,17 @@
                         </p>
                     </a>
                     @*<ul class="nav nav-treeview">
-                            <li class="nav-item">
-                                <a href="@Url.Action("Dashboard", "Home")" class="nav-link">
-                                    <i class="far fa-circle nav-icon"></i>
-                                    <p>My Dashboard</p>
-                                </a>
-                            </li>
+                <li class="nav-item">
+                    <a href="@Url.Action("Dashboard", "Home")" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>My Dashboard</p>
+                    </a>
+                </li>
 
 
 
 
-                        </ul>*@
+            </ul>*@
                 </li>
                 @if (User.IsInRole("Admin"))
                 {
@@ -155,20 +157,21 @@
                     </ul>
                 </li>
                 <!-- Log Out -->
-                <li class="nav-item">
-                    @if (Request.IsAuthenticated)
-                    {
-                        using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "nav-link", style = "background-color: #ff851b;" }))
-                        {
-                            @Html.AntiForgeryToken()
 
-                            <a href="javascript:document.getElementById('logoutForm').submit()">
-                                <i class="fas fa-door-open nav-icon"></i>
-                                <p>Log Out</p>
+                @if (Request.IsAuthenticated)
+                {
+                    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        <li class="nav-item">
+                            <a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link bg-orange">
+                                <i class="fas fa-door-open nav-icon text-white"></i>
+                                <p class="text-white">Log Out</p>
                             </a>
-                        }
+                        </li>
                     }
-                </li>
+                }
+
             </ul>
         </nav>
         <!-- /.sidebar-menu -->
