--- a/Wray_Tracker/Views/Home/About.cshtml
+++ b/Wray_Tracker/Views/Home/About.cshtml
@@ -59,9 +59,9 @@
                 <div class="col-12">
                     <a href="@Url.Action("EditProfile", "Home")">
                         <div class="info-box">
-                            <span class="info-box-icon bg-gradient-orange elevation-1"><i class="fas fa-cog"></i></span>
+                            <span class="info-box-icon bg-gradient-orange elevation-1"><i class="fas fa-user-edit"></i></span>
                             <div class="info-box-content">
-                                <span class="text-bold">Edit Profile</span>
+                                <span class="info-box-text" style="font-size: large; font-weight: bold; color: black;">Edit Profile</span>
                             </div>
                             <!-- /.info-box-content -->
                         </div>
