--- a/Wray_Tracker/Views/Home/Dashboard.cshtml
+++ b/Wray_Tracker/Views/Home/Dashboard.cshtml
@@ -37,11 +37,8 @@
                         <span class="info-box-icon bg-info elevation-1"><i class="fas fa-cog"></i></span>
 
                         <div class="info-box-content">
-                            <span class="info-box-text">Active Projects</span>
-                            <span class="info-box-number">
-                                6
-
-                            </span>
+                            <span class="info-box-text">Projects</span>
+                            <span class="info-box-number">@Model.ProjectVM.ProjectCount</span>
                         </div>
                         <!-- /.info-box-content -->
                     </div>
@@ -53,8 +50,8 @@
                         <span class="info-box-icon bg-danger elevation-1"><i class="fas fa-book-open"></i></span>
 
                         <div class="info-box-content">
-                            <span class="info-box-text">Active Tickets</span>
-                            <span class="info-box-number">7</span>
+                            <span class="info-box-text">Tickets</span>
+                            <span class="info-box-number">@Model.TicketCount</span>
                         </div>
                         <!-- /.info-box-content -->
                     </div>
@@ -67,7 +64,7 @@
 
                         <div class="info-box-content">
                             <span class="info-box-text">Managers</span>
-                            <span class="info-box-number">4</span>
+                            <span class="info-box-number">@Model.ProjectVM.AllPMs.Count</span>
                         </div>
                         <!-- /.info-box-content -->
                     </div>
@@ -81,7 +78,7 @@
                         <span class="info-box-icon bg-success elevation-1"><i class="fas fa-users"></i></span>
                         <div class="info-box-content">
                             <span class="info-box-text">Developers</span>
-                            <span class="info-box-number">5</span>
+                            <span class="info-box-number">@Model.ProjectVM.AllDevs.Count</span>
                         </div>
                         <!-- /.info-box-content -->
                     </div>
@@ -93,7 +90,7 @@
                         <span class="info-box-icon bg-orange elevation-1"><i class="fas fa-users"></i></span>
                         <div class="info-box-content">
                             <span class="info-box-text">Submitters</span>
-                            <span class="info-box-number">4</span>
+                            <span class="info-box-number">@Model.ProjectVM.AllSubs.Count</span>
                         </div>
                         <!-- /.info-box-content -->
                     </div>
@@ -107,131 +104,44 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header">
-                            <h5 class="card-title">Monthly Recap Report</h5>
+                            <h5 class="card-title">All Projects</h5>
 
                             <div class="card-tools">
                                 <button type="button" class="btn btn-tool" data-card-widget="collapse">
                                     <i class="fas fa-minus"></i>
                                 </button>
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-tool dropdown-toggle" data-toggle="dropdown">
-                                        <i class="fas fa-wrench"></i>
-                                    </button>
-                                    <div class="dropdown-menu dropdown-menu-right" role="menu">
-                                        <a href="#" class="dropdown-item">Action</a>
-                                        <a href="#" class="dropdown-item">Another action</a>
-                                        <a href="#" class="dropdown-item">Something else here</a>
-                                        <a class="dropdown-divider"></a>
-                                        <a href="#" class="dropdown-item">Separated link</a>
-                                    </div>
-                                </div>
-                                <button type="button" class="btn btn-tool" data-card-widget="remove">
-                                    <i class="fas fa-times"></i>
-                                </button>
                             </div>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
-                            <div class="row">
-                                <div class="col-md-8">
-                                    <p class="text-center">
-                                        <strong>Sales: 1 Jan, 2014 - 30 Jul, 2014</strong>
-                                    </p>
+                            
+                               <table class="table table-striped table-bordered">
+                                   <thead>
+                                       <tr>
+                                           <th>
+                                               @Html.DisplayName("Project Name")
+                                           </th>
+                                           <th></th>
+                                       </tr>
+                                   </thead>
+                                   <tbody>
+                                       @foreach (var project in Model.ProjectVM.AllProjects)
+                                       {
+                                           <tr>
+                                               <td>
+                                                   @Html.DisplayFor(modelItem => project.Name)
+                                               </td>
+                                               <td>
+                                                   @Html.ActionLink("Edit", "Edit", new { id = project.Id }) |
+                                                   @Html.ActionLink("Details", "Details", new { id = project.Id }) |
+                                                   @Html.ActionLink("Delete", "Delete", new { id = project.Id })
+                                               </td>
+                                           </tr>
+                                       }
 
-                                    <div class="chart">
-                                        <!-- Sales Chart Canvas -->
-                                        <canvas id="salesChart" height="180" style="height: 180px;"></canvas>
-                                    </div>
-                                    <!-- /.chart-responsive -->
-                                </div>
-                                <!-- /.col -->
-                                <div class="col-md-4">
-                                    <p class="text-center">
-                                        <strong>Goal Completion</strong>
-                                    </p>
-
-                                    <div class="progress-group">
-                                        Add Products to Cart
-                                        <span class="float-right"><b>160</b>/200</span>
-                                        <div class="progress progress-sm">
-                                            <div class="progress-bar bg-primary" style="width: 80%"></div>
-                                        </div>
-                                    </div>
-                                    <!-- /.progress-group -->
-
-                                    <div class="progress-group">
-                                        Complete Purchase
-                                        <span class="float-right"><b>310</b>/400</span>
-                                        <div class="progress progress-sm">
-                                            <div class="progress-bar bg-danger" style="width: 75%"></div>
-                                        </div>
-                                    </div>
-
-                                    <!-- /.progress-group -->
-                                    <div class="progress-group">
-                                        <span class="progress-text">Visit Premium Page</span>
-                                        <span class="float-right"><b>480</b>/800</span>
-                                        <div class="progress progress-sm">
-                                            <div class="progress-bar bg-success" style="width: 60%"></div>
-                                        </div>
-                                    </div>
-
-                                    <!-- /.progress-group -->
-                                    <div class="progress-group">
-                                        Send Inquiries
-                                        <span class="float-right"><b>250</b>/500</span>
-                                        <div class="progress progress-sm">
-                                            <div class="progress-bar bg-warning" style="width: 50%"></div>
-                                        </div>
-                                    </div>
-                                    <!-- /.progress-group -->
-                                </div>
-                                <!-- /.col -->
-                            </div>
-                            <!-- /.row -->
-                        </div>
+                                   </tbody>
+                               </table>
                         <!-- ./card-body -->
-                        <div class="card-footer">
-                            <div class="row">
-                                <div class="col-sm-3 col-6">
-                                    <div class="description-block border-right">
-                                        <span class="description-percentage text-success"><i class="fas fa-caret-up"></i> 17%</span>
-                                        <h5 class="description-header">$35,210.43</h5>
-                                        <span class="description-text">TOTAL REVENUE</span>
-                                    </div>
-                                    <!-- /.description-block -->
-                                </div>
-                                <!-- /.col -->
-                                <div class="col-sm-3 col-6">
-                                    <div class="description-block border-right">
-                                        <span class="description-percentage text-warning"><i class="fas fa-caret-left"></i> 0%</span>
-                                        <h5 class="description-header">$10,390.90</h5>
-                                        <span class="description-text">TOTAL COST</span>
-                                    </div>
-                                    <!-- /.description-block -->
-                                </div>
-                                <!-- /.col -->
-                                <div class="col-sm-3 col-6">
-                                    <div class="description-block border-right">
-                                        <span class="description-percentage text-success"><i class="fas fa-caret-up"></i> 20%</span>
-                                        <h5 class="description-header">$24,813.53</h5>
-                                        <span class="description-text">TOTAL PROFIT</span>
-                                    </div>
-                                    <!-- /.description-block -->
-                                </div>
-                                <!-- /.col -->
-                                <div class="col-sm-3 col-6">
-                                    <div class="description-block">
-                                        <span class="description-percentage text-danger"><i class="fas fa-caret-down"></i> 18%</span>
-                                        <h5 class="description-header">1200</h5>
-                                        <span class="description-text">GOAL COMPLETIONS</span>
-                                    </div>
-                                    <!-- /.description-block -->
-                                </div>
-                            </div>
-                            <!-- /.row -->
-                        </div>
-                        <!-- /.card-footer -->
                     </div>
                     <!-- /.card -->
                 </div>
