update to files
refinements to ui/ux

--- a/Wray_Tracker/Views/Account/DemoLogin.cshtml
+++ b/Wray_Tracker/Views/Account/DemoLogin.cshtml
@@ -73,7 +73,7 @@
                     @Html.AntiForgeryToken()
                     @Html.Hidden("emailKey", "DemoAdminEmail")
 
-                    <button type="submit" class=" btn btn-primary btn-block">Admin Log In</button>
+                    <button type="submit" class=" btn bg-gradient-blue btn-block">Admin Log In</button>
                 }
 
                 @* Demo PM *@
@@ -82,7 +82,7 @@
                     @Html.AntiForgeryToken()
                     @Html.Hidden("emailKey", "DemoPMEmail")
 
-                    <button type="submit" class=" btn btn-success btn-block">Project Manager Log In</button>
+                    <button type="submit" class=" btn bg-gradient-green btn-block">Project Manager Log In</button>
                 }
 
                 @* Demo Dev *@
@@ -91,7 +91,7 @@
                     @Html.AntiForgeryToken()
                     @Html.Hidden("emailKey", "DemoDevEmail")
 
-                    <button type="submit" class=" btn btn-info btn-block bg-navy">Developer Log In</button>
+                    <button type="submit" class=" btn btn-info btn-block bg-gradient-navy">Developer Log In</button>
                 }
 
                 @* Demo Sub *@
@@ -100,7 +100,7 @@
                     @Html.AntiForgeryToken()
                     @Html.Hidden("emailKey", "DemoSubEmail")
 
-                    <button type="submit" class=" btn btn-warning btn-block bg-orange">Submitter Log In</button>
+                    <button type="submit" class=" btn btn-block bg-gradient-orange text-white">Submitter Log In</button>
                 }
 
                 <p class="mb-1">
