--- a/Wray_Tracker/Views/Account/Login.cshtml
+++ b/Wray_Tracker/Views/Account/Login.cshtml
@@ -73,7 +73,7 @@
                         </div>
                         <!-- /.col -->
                         <div class="col-4">
-                            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+                            <button type="submit" class="btn btn-sm btn-block bg-gradient-orange text-white">Sign In</button>
                         </div>
                         <!-- /.col -->
                     </div>
