--- a/Wray_Tracker/Views/Home/Dashboard.cshtml
+++ b/Wray_Tracker/Views/Home/Dashboard.cshtml
@@ -11,7 +11,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0 text-dark"><strong>My Dashboard</strong></h1>
+                <h1 class="m-0 text-dark">My Dashboard</h1>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -87,7 +87,7 @@
                 <!-- /.col -->
                 <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
-                        <span class="info-box-icon bg-orange elevation-1"><i class="fas fa-users"></i></span>
+                        <span class="info-box-icon bg-orange elevation-1"><i class="fas fa-users text-white"></i></span>
                         <div class="info-box-content">
                             <span class="info-box-text">Submitters</span>
                             <span class="info-box-number">@Model.ProjectVM.AllSubs.Count</span>
@@ -103,19 +103,18 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="card">
-                        <div class="card-header">
-                            <h5 class="card-title">All Projects</h5>
-
-                            <div class="card-tools">
+                        <div class="mx-lg-2 mt-lg-n2 elevation-2 bg-gradient-orange text-white">
+                            <h5 class="card-header">All Projects</h5>
+                            @*<div class="card-tools">
                                 <button type="button" class="btn btn-tool" data-card-widget="collapse">
                                     <i class="fas fa-minus"></i>
                                 </button>
-                            </div>
+                            </div>*@
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
                             
-                               <table class="table table-striped table-bordered">
+                               <table class="table table-striped">
                                    <thead>
                                        <tr>
                                            <th>
@@ -138,7 +137,6 @@
                                                </td>
                                            </tr>
                                        }
-
                                    </tbody>
                                </table>
                         <!-- ./card-body -->
@@ -152,50 +150,20 @@
             <div class="row">
                 <!-- Left col -->
                 <div class="col-md-8">
-                    <!-- MAP & BOX PANE -->
-                    <div class="card">
+                    <!-- PIE CHART -->
+                    <div class="card card-danger">
                         <div class="card-header">
-                            <h3 class="card-title">US-Visitors Report</h3>
+                            <h3 class="card-title">Pie Chart</h3>
 
                             <div class="card-tools">
                                 <button type="button" class="btn btn-tool" data-card-widget="collapse">
                                     <i class="fas fa-minus"></i>
                                 </button>
-                                <button type="button" class="btn btn-tool" data-card-widget="remove">
-                                    <i class="fas fa-times"></i>
-                                </button>
+                                <button type="button" class="btn btn-tool" data-card-widget="remove"><i class="fas fa-times"></i></button>
                             </div>
                         </div>
-                        <!-- /.card-header -->
-                        <div class="card-body p-0">
-                            <div class="d-md-flex">
-                                <div class="p-1 flex-fill" style="overflow: hidden">
-                                    <!-- Map will be created here -->
-                                    <div id="world-map-markers" style="height: 325px; overflow: hidden">
-                                        <div class="map"></div>
-                                    </div>
-                                </div>
-                                <div class="card-pane-right bg-success pt-2 pb-2 pl-4 pr-4">
-                                    <div class="description-block mb-4">
-                                        <div class="sparkbar pad" data-color="#fff">90,70,90,70,75,80,70</div>
-                                        <h5 class="description-header">8390</h5>
-                                        <span class="description-text">Visits</span>
-                                    </div>
-                                    <!-- /.description-block -->
-                                    <div class="description-block mb-4">
-                                        <div class="sparkbar pad" data-color="#fff">90,50,90,70,61,83,63</div>
-                                        <h5 class="description-header">30%</h5>
-                                        <span class="description-text">Referrals</span>
-                                    </div>
-                                    <!-- /.description-block -->
-                                    <div class="description-block">
-                                        <div class="sparkbar pad" data-color="#fff">90,50,90,70,61,83,63</div>
-                                        <h5 class="description-header">70%</h5>
-                                        <span class="description-text">Organic</span>
-                                    </div>
-                                    <!-- /.description-block -->
-                                </div><!-- /.card-pane-right -->
-                            </div><!-- /.d-md-flex -->
+                        <div class="card-body">
+                            <canvas id="pieChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
                         </div>
                         <!-- /.card-body -->
                     </div>
@@ -781,8 +749,10 @@
                 <!-- /.col -->
             </div>
             <!-- /.row -->
-        </div><!--/. container-fluid -->
-    </section>
+        </div>
+    </div>
+    <!--/. container-fluid -->
+ </section>
     <!-- /.content -->
 }
 
