--- a/Wray_Tracker/Views/Shared/_Layout.cshtml
+++ b/Wray_Tracker/Views/Shared/_Layout.cshtml
@@ -28,71 +28,105 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="~/Images/favicon-32x32.png" />
 </head>
-<body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
+<body class="hold-transition sidebar-mini layout-fixed layout-sm-navbar-fixed layout-sm-footer-not-fixed">
     <div class="wrapper">
         <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand navbar-white navbar-light" style="background-color: #001f3f;">
+        <nav class="main-header navbar navbar-expand-sm navbar-white navbar-light elevation-3">
             <!-- Left navbar links -->
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-white" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <span>Logged in as: @Model.RoleName</span>
+                    }
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="@Url.Action("Dashboard", "Home")" class="nav-link text-white">Home</a>
+                    <a href="@Url.Action("Dashboard", "Home")" class="nav-link">Home</a>
                 </li>
                 @*<li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link" style="color: #fff;">About</a>
-                </li>*@
+                        <a href="#" class="nav-link" style="color: #fff;">About</a>
+                    </li>*@
             </ul>
 
             <!-- SEARCH FORM -->
             @*<form class="form-inline ml-3">
-                <div class="input-group input-group-sm">
-                    <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                    <div class="input-group-append">
-                        <button class="btn btn-navbar" type="submit">
-                            <i class="fas fa-search"></i>
-                        </button>
+                    <div class="input-group input-group-sm">
+                        <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+                        <div class="input-group-append">
+                            <button class="btn btn-navbar" type="submit">
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </div>
                     </div>
-                </div>
-            </form>*@
+                </form>*@
 
             <!-- Right navbar links -->
             <ul class="navbar-nav ml-auto">
                 <!-- Notifications Dropdown Menu -->
-                <!-- Messages Dropdown Menu -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link text-white" data-toggle="dropdown" href="#">
-                        <i class="far fa-bell"></i>
-                        <span class="badge badge-danger navbar-badge">@MessageHelper.GetUnreadNotifications().Count()</span>
+                    <a class="nav-link" data-toggle="dropdown" href="#">
+                        <i class="fas fa-bell"></i>
+                        <span class="badge bg-gradient-orange navbar-badge text-white">@MessageHelper.GetUnreadNotifications().Count()</span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                         @foreach (var notification in MessageHelper.GetUnreadNotifications())
                         {
-                            <a href="#" class="dropdown-item close">
-                                <!-- Message Start -->
-                                <div class="media">
-                                    <img src="~/Images/user.svg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
-                                    <div class="media-body">
-                                        <h3 class="dropdown-item-title text-bold">
-                                            @notification.Sender.FullName
-                                        </h3>
-                                        <p class="text-sm">@notification.NotificationBody</p>
-                                        <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i>@notification.Created</p>
+                            using (Html.BeginForm("Dismiss", "Home", FormMethod.Post))
+                            {
+                                @Html.AntiForgeryToken()
+                                @Html.Hidden("Id", notification.Id)
+                                <a href="#" class="dropdown-item">
+                                    <!-- Message Start -->
+                                    <div class="media">
+                                        <img src="~/Images/user.svg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+                                        <div class="media-body">
+                                            <h3 class="dropdown-item-title text-bold">
+                                                @notification.Sender.FullName
+                                            </h3>
+                                            <p class="text-sm">@notification.NotificationBody</p>
+                                            <p class="text-sm text-muted"><i class="far fa-clock mr-1"></i>@notification.Created.ToString("MMM dd, yyyy")</p>
+                                        </div>
                                     </div>
-                                </div>
-                                <!-- Message End -->
-                            </a>
+                                    <!-- Message End -->
+                                </a>
+                                <button type="submit" class="btn btn-xs btn-block bg-gradient-orange">Dismiss</button>
+                            }
                             <div class="dropdown-divider"></div>
                         }
-                        @* if no messages then show 0 messages, not going to be a link *@
-                        <a href="@Url.Action("Index", "TicketNotifications")" class="dropdown-item dropdown-footer">See All Messages</a>
+                        @if (@MessageHelper.GetUnreadNotifications().Count == 0)
+                        {
+                            <span class="dropdown-item dropdown-footer">No New Messages</span>
+                        }
+
                     </div>
-                    </li>
+                </li>
+                <!-- Current User Dropdown Menu -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link" data-toggle="dropdown" href="#">
+                        <i class="fas fa-user"></i>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
+                        <span class="dropdown-item dropdown-header">User Actions</span>
+                        <div class="dropdown-divider"></div>
+                        <a href="@Url.Action("About", "Home")" class="dropdown-item">
+                            <i class="fas fa-user mr-2"></i> Profile
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        @if (Request.IsAuthenticated)
+                        {
+                            using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
+                            {
+                                @Html.AntiForgeryToken()
+                                <a href="javascript:document.getElementById('logoutForm').submit()" class="dropdown-item">
+                                    <i class="fas fa-door-open mr-2"></i>Log Out
+                                </a>
+                            }
+                        }
+                    </div>
+                </li>
             </ul>
         </nav>
         <!-- /.navbar -->
-
         @*Put Partial view back*@
         @Html.Action("_SideNav", "Home")
 
@@ -102,15 +136,16 @@
         </div>
         <!-- /.content-wrapper -->
         <!-- Control Sidebar -->
-        <aside class="control-sidebar control-sidebar-dark">
+        <aside class="control-sidebar control-sidebar-content">
             <!-- Control sidebar content goes here -->
         </aside>
         <!-- /.control-sidebar -->
         <!-- Main Footer -->
-        <footer class="main-footer">
-            <strong>Copyright &copy; @DateTime.Now.Year.  <a href="//ashtondwray-portfolio.azurewebsites.net/" target="_blank" class="text-orange">Ashton Wray</a>.</strong>
-            All rights reserved.
-
+        <footer class="main-footer small">
+            <div class="layout-sm-footer-not-fixed">
+                <strong>Copyright &copy; @DateTime.Now.Year.  <a href="//ashtondwray-portfolio.azurewebsites.net/" target="_blank" class="text-orange">Ashton Wray</a>.</strong>
+                All rights reserved.
+            </div>
         </footer>
     </div>
     <!-- ./wrapper -->
@@ -133,8 +168,12 @@
     <script src="~/Scripts/dataTables.responsive.min.js"></script>
     <script src="~/Scripts/responsive.bootstrap4.min.js"></script>
 
+    <!-- ChartJS -->
+    <script src="~/Scripts/Chart.min.js"></script>
+
     <!-- AdminLTE App -->
     <script src="~/Scripts/adminlte.js"></script>
+    <script src="~/Scripts/adminlte.min.js"></script>
 
     <!-- OPTIONAL SCRIPTS -->
     <script src="~/Scripts/demo.js"></script>
@@ -149,11 +188,64 @@
     <!-- Sweet Alerts -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 
-    <!-- ChartJS -->
-    <script src="~/Scripts/Chart.min.js"></script>
+
 
     <!-- PAGE SCRIPTS -->
     <script src="~/Scripts/dashboard2.js"></script>
+
+    <script>
+        $(function () {
+            //-------------
+            //- DONUT CHART -
+            //-------------
+            // Get context with jQuery - using jQuery's .get() method.
+            var donutChartCanvas = $('#pieChart').get(0).getContext('2d');
+            var donutData = {
+                labels: [
+                    'Chrome',
+                    'IE',
+                    'FireFox',
+                    'Safari',
+                    'Opera',
+                    'Navigator',
+                ],
+                datasets: [
+                    {
+                        data: [700, 500, 400, 600, 300, 100],
+                        backgroundColor: ['#f56954', '#00a65a', '#f39c12', '#00c0ef', '#3c8dbc', '#d2d6de'],
+                    }
+                ]
+            };
+            var donutOptions = {
+                maintainAspectRatio: false,
+                responsive: true,
+            };
+            //Create pie or douhnut chart
+            // You can switch between pie and douhnut using the method below.
+            var donutChart = new Chart(donutChartCanvas, {
+                type: 'pie',
+                data: donutData,
+                options: donutOptions
+            });
+            //-------------
+            //- PIE CHART -
+            //-------------
+            // Get context with jQuery - using jQuery's .get() method.
+            var pieChartCanvas = $('#pieChart').get(0).getContext('2d');
+            var pieData = donutData;
+            var pieOptions = {
+                maintainAspectRatio: false,
+                responsive: true,
+            };
+            //Create pie or douhnut chart
+            // You can switch between pie and douhnut using the method below.
+            var pieChart = new Chart(pieChartCanvas, {
+                type: 'pie',
+                data: pieData,
+                options: pieOptions
+            });
+        });
+    </script>
 
     <script>
         $(function () {
@@ -176,12 +268,6 @@
     <script type="text/javascript">
         $(document).ready(function () {
             bsCustomFileInput.init();
-        });
-    </script>
-
-    <script type="text/javascript">
-        $('.close').click(function () {
-            $(this).slideUp().empty();
         });
     </script>
 
