--- a/Wray_Tracker/Views/Shared/_SideNav.cshtml
+++ b/Wray_Tracker/Views/Shared/_SideNav.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Wray_Tracker.Models.ApplicationUser
 
 <!-- Main Sidebar Container -->
-<aside class="main-sidebar sidebar-dark-primary elevation-4">
+<aside class="main-sidebar sidebar-light-gray-dark elevation-5">
     <!-- Brand Logo -->
-    <a href="@Url.Action("Dashboard", "Home")" class="brand-link" style="background-color: #001f3f;">
+    <a href="@Url.Action("Dashboard", "Home")" class="brand-link bg-gradient-navy">
         <img src="~/Images/d-and-d-brands.png" alt="DragonFly Logo" class="brand-image img-circle elevation-3"
              style="opacity: .8; margin-right: -.5rem;">
         <span class="brand-text font-weight-light">
@@ -13,47 +13,61 @@
 
     <!-- Sidebar -->
     <div class="sidebar">
-        <!-- Sidebar user panel (optional) -->
-        <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-            <div class="image">
-                <img src="~/Images/user.svg" class="img-circle elevation-2" alt="User Image">
+        @if (Model != null)
+        {
+            <!-- Sidebar user panel (optional) -->
+            <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+                <div class="image">
+                    <img src="~/Images/user.svg" class="img-circle elevation-2" alt="User Image">
+                </div>
+                <div class="info">
+                    <a href="@Url.Action("About", "Home")" class="d-block">Welcome @Model.FirstName</a>
+                </div>
             </div>
-            <div class="info">
-                <a href="@Url.Action("About", "Home")" class="d-block">@Model.FullName</a>
+        }
+        else
+        {
+            <!-- Sidebar user panel (optional) -->
+            <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+                <div class="image">
+                    <img src="~/Images/user.svg" class="img-circle elevation-2" alt="User Image">
+                </div>
+                <div class="info">
+                    <a href="#" class="d-block">Non-Registered User</a>
+                </div>
             </div>
-        </div>
+        }
 
         <!-- Sidebar Menu -->
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                <!-- Add icons to the links using the .nav-icon class
-    with font-awesome or any other icon font library -->
+                <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
                 <li class="nav-item has-treeview">
-                    <a href="@Url.Action("Dashboard", "Home")" class="nav-link active" style="background-color: #001f3f;">
-                        <i class="nav-icon fas fa-tachometer-alt"></i>
+                    <a href="@Url.Action("Dashboard", "Home")" class="nav-link active bg-gradient-navy">
+                        <i class="nav-icon fas fa-binoculars"></i>
                         <p>
                             Dashboard
                             @*<i class="right fas fa-angle-left"></i>*@
                         </p>
                     </a>
                     @*<ul class="nav nav-treeview">
-                <li class="nav-item">
-                    <a href="@Url.Action("Dashboard", "Home")" class="nav-link">
-                        <i class="far fa-circle nav-icon"></i>
-                        <p>My Dashboard</p>
-                    </a>
-                </li>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Dashboard", "Home")" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>My Dashboard</p>
+                            </a>
+                        </li>
 
 
 
 
-            </ul>*@
+                    </ul>*@
                 </li>
                 @if (User.IsInRole("Admin"))
                 {
                     <li class="nav-item has-treeview">
                         <a href="#" class="nav-link">
-                            <i class="nav-icon fas fa-copy"></i>
+                            <i class="nav-icon fas fa-user-ninja"></i>
                             <p>
                                 Admin
                                 <i class="fas fa-angle-left right"></i>
@@ -158,19 +172,19 @@
                 </li>
                 <!-- Log Out -->
 
-                @if (Request.IsAuthenticated)
+                @*@if (Request.IsAuthenticated)
                 {
                     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
                     {
                         @Html.AntiForgeryToken()
                         <li class="nav-item">
-                            <a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link bg-orange">
+                            <a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link bg-gradient-orange">
                                 <i class="fas fa-door-open nav-icon text-white"></i>
-                                <p class="text-white">Log Out</p>
+                                <p class="text-white"> Log Out</p>
                             </a>
                         </li>
                     }
-                }
+                }*@
 
             </ul>
         </nav>
