--- a/Wray_Tracker/Views/Tickets/Edit.cshtml
+++ b/Wray_Tracker/Views/Tickets/Edit.cshtml
@@ -14,8 +14,8 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    
+
+
 <div class="form-horizontal">
     <h4>Ticket</h4>
     <hr />
@@ -46,7 +46,7 @@
         </div>
     </div>
 
-    @if (User.IsInRole("Admin") || User.IsInRole("Manager") || User.IsInRole("Developer"))
+    @if (!User.IsInRole("Submitter"))
     {
         <div class="form-group">
             @Html.LabelFor(model => model.TicketStatusId, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -55,6 +55,10 @@
                 @Html.ValidationMessageFor(model => model.TicketStatusId, "", new { @class = "text-danger" })
             </div>
         </div>
+    }
+    else
+    {
+        @Html.HiddenFor(model => model.TicketStatusId)
     }
 
     <div class="form-group">
@@ -65,13 +69,21 @@
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.DeveloperId, "Developer", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("DeveloperId", null, "- Select Developer -", htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.DeveloperId, "", new { @class = "text-danger" })
+    @if (!User.IsInRole("Submitter") || !User.IsInRole("Developer"))
+    {
+        <div class="form-group">
+            @Html.LabelFor(model => model.DeveloperId, "Developer", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("DeveloperId", null, "- Select Developer -", htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.DeveloperId, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
+    }
+    else
+    {
+        @Html.HiddenFor(model => model.DeveloperId)
+    }
+
 
     <div class="form-group">
         @Html.LabelFor(model => model.Updated, htmlAttributes: new { @class = "control-label col-md-2" })
